tests/fixtures/valid/set/str_set_membership.py
# String membership in set
s: set[str] = {"apple", "banana", "cherry"}
print("apple" in s)
print("grape" in s)
print("apple" not in s)
print("grape" not in s)
